--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native/new-app-screen": "0.81.1",
+    "@react-navigation/native": "^7.1.17",
+    "axios": "^1.12.2",
     "react": "19.1.0",
     "react-native": "0.81.1",
+    "react-native-background-actions": "^4.0.1",
+    "react-native-background-fetch": "^4.2.8",
     "react-native-fs": "^2.20.0",
     "react-native-permissions": "^5.4.2",
     "react-native-safe-area-context": "^5.5.2",
